--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "caniuse-db": "^1.0.30001119",
+    "diff": ">=3.5.0",
     "grunt": "^1.3.0",
     "grunt-autoprefixer": "^3.0.*",
     "grunt-browser-sync": "^2.2.*",
